@@ -16,6 +16,8 @@
 
 package com.jayway.restassured.specification;
 
+import com.jayway.restassured.authentication.AuthenticationScheme;
+import com.jayway.restassured.authentication.CertificateAuthSettings;
 import com.jayway.restassured.authentication.FormAuthConfig;
 import com.jayway.restassured.authentication.KeystoreProvider;
 
@@ -80,25 +82,13 @@ public interface AuthenticationSpecification {
     /**
      * Sets a certificate to be used for SSL authentication. See {@link Class#getResource(String)} for how to get a URL from a resource
      * on the classpath.
+     * <p/>
      *
-     * @param certURL  URL to a JKS keystore where the certificate is stored.
-     * @param password password to decrypt the keystore
-     * @param certType The certificate type
-     * @param port     The SSL port
+     * @param certURL                 URL to a JKS keystore where the certificate is stored.
+     * @param password                The password for the keystore
+     * @param certificateAuthSettings More advanced settings for the certificate authentication
      */
-    RequestSpecification certificate(String certURL, String password, String certType, int port);
-
-    /**
-     * Sets a certificate to be used for SSL authentication. See {@link Class#getResource(String)} for how to get a URL from a resource
-     * on the classpath.
-     *
-     * @param certURL            URL to a JKS keystore where the certificate is stored.
-     * @param password           password to decrypt the keystore
-     * @param certType           The certificate type
-     * @param port               The SSL port
-     * @param trustStoreProvider The provider
-     */
-    RequestSpecification certificate(String certURL, String password, String certType, int port, KeystoreProvider trustStoreProvider);
+    RequestSpecification certificate(String certURL, String password, CertificateAuthSettings certificateAuthSettings);
 
     /**
      * Excerpt from the HttpBuilder docs:<br>
